{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 22,
  "lineage": "09086fbc-f265-cf74-ec2b-47b09a66effa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "roboshop",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "backend",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0220d79f3f480ecf5",
            "arn": "arn:aws:ec2:us-east-1:770399597340:instance/i-0519539dd6c80d154",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0519539dd6c80d154",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f8e34d65e9f2e376"
              }
            ],
            "primary_network_interface_id": "eni-0f8e34d65e9f2e376",
            "private_dns": "ip-172-31-22-185.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.22.185",
            "public_dns": "ec2-50-19-180-145.compute-1.amazonaws.com",
            "public_ip": "50.19.180.145",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bf91103e6c28993d",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "expense-dev-backend",
              "roboshop-common"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05f0a4ba779ef18c3",
            "tags": {
              "Name": "expense-dev-backend",
              "env": "dev",
              "project": "expense",
              "region": "us-east-1"
            },
            "tags_all": {
              "Name": "expense-dev-backend",
              "env": "dev",
              "project": "expense",
              "region": "us-east-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-098e86444b2bd0848",
              "sg-0a3ce843cd67cc1dc"
            ]
          },
          "dependencies": [
            "aws_security_group.roboshop-common",
            "aws_security_group.sg-instance"
          ]
        },
        {
          "index_key": "database",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0220d79f3f480ecf5",
            "arn": "arn:aws:ec2:us-east-1:770399597340:instance/i-0e1a9ad58288e8bbb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e1a9ad58288e8bbb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0989a2aff7a6909da"
              }
            ],
            "primary_network_interface_id": "eni-0989a2aff7a6909da",
            "private_dns": "ip-172-31-29-174.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.29.174",
            "public_dns": "ec2-98-93-13-46.compute-1.amazonaws.com",
            "public_ip": "98.93.13.46",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cd5f0985f07e7f8b",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "expense-dev-database",
              "roboshop-common"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05f0a4ba779ef18c3",
            "tags": {
              "Name": "expense-dev-database",
              "env": "dev",
              "project": "expense",
              "region": "us-east-1"
            },
            "tags_all": {
              "Name": "expense-dev-database",
              "env": "dev",
              "project": "expense",
              "region": "us-east-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-098e86444b2bd0848",
              "sg-0f9a381ef514485c8"
            ]
          },
          "dependencies": [
            "aws_security_group.roboshop-common",
            "aws_security_group.sg-instance"
          ]
        },
        {
          "index_key": "frontend",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0220d79f3f480ecf5",
            "arn": "arn:aws:ec2:us-east-1:770399597340:instance/i-09ea1c5c52c809571",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09ea1c5c52c809571",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d6c696672f7f146b"
              }
            ],
            "primary_network_interface_id": "eni-0d6c696672f7f146b",
            "private_dns": "ip-172-31-22-51.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.22.51",
            "public_dns": "ec2-54-158-1-164.compute-1.amazonaws.com",
            "public_ip": "54.158.1.164",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0535f316e4e15b3d7",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "expense-dev-frontend",
              "roboshop-common"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05f0a4ba779ef18c3",
            "tags": {
              "Name": "expense-dev-frontend",
              "env": "dev",
              "project": "expense",
              "region": "us-east-1"
            },
            "tags_all": {
              "Name": "expense-dev-frontend",
              "env": "dev",
              "project": "expense",
              "region": "us-east-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03348c4c86b767729",
              "sg-098e86444b2bd0848"
            ]
          },
          "dependencies": [
            "aws_security_group.roboshop-common",
            "aws_security_group.sg-instance"
          ]
        },
        {
          "index_key": "lb",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0220d79f3f480ecf5",
            "arn": "arn:aws:ec2:us-east-1:770399597340:instance/i-0e4c5658352b38306",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e4c5658352b38306",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0493ba8f659dd5960"
              }
            ],
            "primary_network_interface_id": "eni-0493ba8f659dd5960",
            "private_dns": "ip-172-31-26-194.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.26.194",
            "public_dns": "ec2-100-26-47-73.compute-1.amazonaws.com",
            "public_ip": "100.26.47.73",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ce97671b4c6fd8c5",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "expense-dev-lb",
              "roboshop-common"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05f0a4ba779ef18c3",
            "tags": {
              "Name": "expense-dev-lb",
              "env": "dev",
              "project": "expense",
              "region": "us-east-1"
            },
            "tags_all": {
              "Name": "expense-dev-lb",
              "env": "dev",
              "project": "expense",
              "region": "us-east-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0788bbf242fd5ea79",
              "sg-098e86444b2bd0848"
            ]
          },
          "dependencies": [
            "aws_security_group.roboshop-common",
            "aws_security_group.sg-instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "roboshop-common",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770399597340:security-group/sg-098e86444b2bd0848",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098e86444b2bd0848",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "roboshop-common",
            "name_prefix": "",
            "owner_id": "770399597340",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c54f4db80a7fff28"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "backend",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770399597340:security-group/sg-0a3ce843cd67cc1dc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a3ce843cd67cc1dc",
            "ingress": [],
            "name": "expense-dev-backend",
            "name_prefix": "",
            "owner_id": "770399597340",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c54f4db80a7fff28"
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "database",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770399597340:security-group/sg-0f9a381ef514485c8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f9a381ef514485c8",
            "ingress": [],
            "name": "expense-dev-database",
            "name_prefix": "",
            "owner_id": "770399597340",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c54f4db80a7fff28"
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "frontend",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770399597340:security-group/sg-03348c4c86b767729",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03348c4c86b767729",
            "ingress": [],
            "name": "expense-dev-frontend",
            "name_prefix": "",
            "owner_id": "770399597340",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c54f4db80a7fff28"
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "lb",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:770399597340:security-group/sg-0788bbf242fd5ea79",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0788bbf242fd5ea79",
            "ingress": [],
            "name": "expense-dev-lb",
            "name_prefix": "",
            "owner_id": "770399597340",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c54f4db80a7fff28"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}